Fix typo forum API
