# docs/swagger.json
@@ -260,9 +260,38 @@
                 }
             }
         },
-        "/forums": {
+        "/hello": {
             "get": {
-                "description": "List forums",
+                "description": "Health checking for the service",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "healthcheck"
+                ],
+                "summary": "Health Check",
+                "operationId": "GetHelloMessageHandler",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name of the active user",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/posts": {
+            "get": {
+                "description": "List posts",
                 "consumes": [
                     "application/json"
                 ],
@@ -272,8 +301,8 @@
                 "tags": [
                     "forums"
                 ],
-                "summary": "List Forums",
-                "operationId": "ListForums",
+                "summary": "List Posts",
+                "operationId": "ListPosts",
                 "parameters": [
                     {
                         "type": "integer",
@@ -292,7 +321,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ResultResponse-PaginateResult-Forum"
+                            "$ref": "#/definitions/ResultResponse-PaginateResult-Post"
                         }
                     },
                     "500": {
@@ -309,7 +338,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Create forum",
+                "description": "Create post",
                 "consumes": [
                     "application/json"
                 ],
@@ -319,16 +348,16 @@
                 "tags": [
                     "forums"
                 ],
-                "summary": "Create Forum",
-                "operationId": "CreateForum",
+                "summary": "Create Post",
+                "operationId": "CreatePost",
                 "parameters": [
                     {
-                        "description": "forum payload",
+                        "description": "post payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fund-o_api-server_internal_entity.ForumCreatePayload"
+                            "$ref": "#/definitions/fund-o_api-server_internal_entity.PostCreatePayload"
                         }
                     }
                 ],
@@ -336,7 +365,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/ResultResponse-Forum"
+                            "$ref": "#/definitions/ResultResponse-Post"
                         }
                     },
                     "400": {
@@ -354,9 +383,9 @@
                 }
             }
         },
-        "/forums/{id}": {
+        "/posts/{id}": {
             "get": {
-                "description": "Get forum by id",
+                "description": "Get post by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -366,12 +395,12 @@
                 "tags": [
                     "forums"
                 ],
-                "summary": "Get Forum by ID",
-                "operationId": "GetForumByID",
+                "summary": "Get Post by ID",
+                "operationId": "GetPostByID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "forum id to get",
+                        "description": "post id to get",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -381,7 +410,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ResultResponse-Forum"
+                            "$ref": "#/definitions/ResultResponse-Post"
                         }
                     },
                     "500": {
@@ -393,7 +422,7 @@
                 }
             }
         },
-        "/forums/{id}/comments": {
+        "/posts/{id}/comments": {
             "post": {
                 "security": [
                     {
@@ -434,7 +463,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/ResultResponse-fund-o_api-server_internal_entity_CommentDto"
+                            "$ref": "#/definitions/ResultResponse-Comment"
                         }
                     },
                     "400": {
@@ -447,35 +476,6 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/hello": {
-            "get": {
-                "description": "Health checking for the service",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "healthcheck"
-                ],
-                "summary": "Health Check",
-                "operationId": "GetHelloMessageHandler",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "name of the active user",
-                        "name": "name",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/MessageResponse"
                         }
                     }
                 }
@@ -754,6 +754,29 @@
         }
     },
     "definitions": {
+        "Comment": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/User"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "replies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Reply"
+                    }
+                }
+            }
+        },
         "ErrorResponse": {
             "type": "object",
             "properties": {
@@ -765,32 +788,6 @@
                 },
                 "status_code": {
                     "type": "integer"
-                }
-            }
-        },
-        "Forum": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "$ref": "#/definitions/User"
-                },
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/internal_entity.CommentDto"
-                    }
-                },
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         },
@@ -808,7 +805,7 @@
                 }
             }
         },
-        "PaginateResult-Forum": {
+        "PaginateResult-Post": {
             "type": "object",
             "properties": {
                 "current_page": {
@@ -817,7 +814,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/Forum"
+                        "$ref": "#/definitions/Post"
                     }
                 },
                 "from": {
@@ -863,6 +860,32 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "Post": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/User"
+                },
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Comment"
+                    }
+                },
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
@@ -944,11 +967,28 @@
                 }
             }
         },
-        "ResultResponse-Forum": {
+        "Reply": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/User"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "ResultResponse-Comment": {
             "type": "object",
             "properties": {
                 "result": {
-                    "$ref": "#/definitions/Forum"
+                    "$ref": "#/definitions/Comment"
                 },
                 "status": {
                     "type": "string"
@@ -958,11 +998,11 @@
                 }
             }
         },
-        "ResultResponse-PaginateResult-Forum": {
+        "ResultResponse-PaginateResult-Post": {
             "type": "object",
             "properties": {
                 "result": {
-                    "$ref": "#/definitions/PaginateResult-Forum"
+                    "$ref": "#/definitions/PaginateResult-Post"
                 },
                 "status": {
                     "type": "string"
@@ -977,6 +1017,20 @@
             "properties": {
                 "result": {
                     "$ref": "#/definitions/PaginateResult-Transaction"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
+                }
+            }
+        },
+        "ResultResponse-Post": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "$ref": "#/definitions/Post"
                 },
                 "status": {
                     "type": "string"
@@ -1067,20 +1121,6 @@
                     "items": {
                         "$ref": "#/definitions/ProjectCategory"
                     }
-                },
-                "status": {
-                    "type": "string"
-                },
-                "status_code": {
-                    "type": "integer"
-                }
-            }
-        },
-        "ResultResponse-fund-o_api-server_internal_entity_CommentDto": {
-            "type": "object",
-            "properties": {
-                "result": {
-                    "$ref": "#/definitions/fund-o_api-server_internal_entity.CommentDto"
                 },
                 "status": {
                     "type": "string"
@@ -1257,30 +1297,7 @@
                 }
             }
         },
-        "fund-o_api-server_internal_entity.CommentDto": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "$ref": "#/definitions/User"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "replies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/fund-o_api-server_internal_entity.ReplyDto"
-                    }
-                }
-            }
-        },
-        "fund-o_api-server_internal_entity.ForumCreatePayload": {
+        "fund-o_api-server_internal_entity.PostCreatePayload": {
             "type": "object",
             "required": [
                 "content",
@@ -1337,63 +1354,6 @@
                     "type": "number"
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "fund-o_api-server_internal_entity.ReplyDto": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "$ref": "#/definitions/User"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_entity.CommentDto": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "$ref": "#/definitions/User"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "replies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/internal_entity.ReplyDto"
-                    }
-                }
-            }
-        },
-        "internal_entity.ReplyDto": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "$ref": "#/definitions/User"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 }
             }
